# nbl

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  biome.jsonc  db_compose.yaml  hatch.toml  justfile  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  subtask.yml  task.yml
.github/workflows/: release.yaml
docs/: api.md  conf.py  contributing.md  index.md  references.bib
docs/extensions/: typed_returns.py
docs/notebooks/: example.ipynb
docs/notebooks/00 - Initialize LaminDB/: 00 - Clean Clinical Data.ipynb  01 - Add SpatialData.ipynb  02 - Preprocessing.ipynb  NBL Cell Clustering.ipynb
docs/notebooks/01 - NBL Cell Analysis/: 00 - NBL Cell Clustering.ipynb  03 - Trajectory Methods.ipynb
docs/notebooks/01 - NBL Cell Analysis/Scoring/: 00 - Genearte Scores.ipynb  00 - Generate Scores.ipynb  01 - Analyze Scores.ipynb  02 - Score by Marker Expression.ipynb
docs/notebooks/01 - NBL Cell Analysis/Spatial/: 01 - Spatial Testing.ipynb
docs/notebooks/02 - Vitessce Configuration/: 00 - Vitessce.ipynb
docs/notebooks/04 - External/: HTAN HTAPP.ipynb
nbl_site/: .env.example  drizzle.config.ts  package.json  pnpm-lock.yaml  start-database.sh  tsconfig.json
nbl_site/src/: env.js
nbl_site/src/app/: layout.tsx  page.tsx
nbl_site/src/app/_components/: post.tsx
nbl_site/src/app/api/auth/[...nextauth]/: route.ts
nbl_site/src/app/api/trpc/[trpc]/: route.ts
nbl_site/src/server/: auth.ts
nbl_site/src/server/api/: root.ts  trpc.ts
nbl_site/src/server/api/routers/: post.ts
nbl_site/src/server/db/: index.ts  schema.ts
nbl_site/src/trpc/: react.tsx  server.ts
notebooks/00 - Initialize LaminDB/: 00 - Setup LaminDB.ipynb  01 - Clean Clinical Data.ipynb  02 - Add SpatialData.ipynb
scripts/00 - Initialize LaminDB/: 00-setup_lamindb.py  01-clinical_data_cleaning.py
src/nbl/: __init__.py
src/nbl/_util/: __init__.py  dask.py  decorators.py  utils.py
src/nbl/io/: __init__.py  _utils.py  load.py
src/nbl/ln/: __init__.py  basic.py  featuresets.py  schemas.py  settings.py
src/nbl/pl/: __init__.py  basic.py
src/nbl/pp/: __init__.py  basic.py
src/nbl/tl/: __init__.py  _utils.py  basic.py
src/nbl/util/: __init__.py  dask.py  decorators.py  utils.py
tests/: test_basic.py
