[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "nbl"
description = "nbl"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sricharan Reddy Varra", email = "srivarra@stanford.edu" },
]
authors = [ { name = "Sricharan Reddy Varra" } ]
requires-python = ">=3.11"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "anndata",
  "annsel",
  "cmap>=0.4",
  "dask[array,distributed,diagnostics]>=2024",
  "dask-image>=2024.5.3",
  "fa2-modified>=0.3.10",
  "flowsom",
  "flox>=0.9.15",
  "great-tables>=0.14",
  "hvplot>=0.11.1",
  "ipycytoscape>=1.3.3",
  "leidenalg>=0.10.2",
  "marsilea>=0.4.3",
  "matplotlib>=3.9.2",
  "multispaeti>=1.0.1",
  "natsort>=8.4",
  "numba>=0.60",
  "numpy",
  "numpydantic[zarr,dask]>=1.6.4",
  "palantir>=1.3.3",
  "pandas[performance,excel]>=2.2.3",
  "phate>=1.0.11",
  "seaborn-objects-recipes>=0.1.3",
  # for debug logging (referenced from the issue template)
  "session-info",
  "sklearn-ann[annlibs]>=0.1.2",
  "spaco-release",
  "spatialdata>=0.2.5.post0",
  "spatialdata-plot>=0.2.7",
  # "sparrow[clustering]",
  "spatialleiden>=0.1.1",
  "squidpy>=1.6.1",
  "universal-pathlib>=0.2.5",
  # "vitessce[all]",
  "wandb>=0.18.7",
  "xarray[accel,parallel]",
  "xbatcher>=0.4",
]
optional-dependencies.db = [
  "faker>=33",
  "faker-biology>=0.6.4",
  "fsspec[git,s3]",
  "graphviz>=0.20.3",
  "ipylab>=1",
  "lamindb[jupyter,bionty,erdiagram,zarr,aws]>=0.77",
]
optional-dependencies.dev = [
  "nb-clean>=4.0.1",
  "pre-commit",
  "ruff>=0.7.4",
  "twine>=5.1.1",
]
optional-dependencies.doc = [
  "docutils>=0.21.2",
  "esbonio",
  # For notebooks
  "ipykernel",
  "ipython",
  "myst-nb>=1.1.2",
  "pandas",
  "setuptools",                   # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "sphinx>=8.1.3",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "sphinx-autosummary-accessors",
  "sphinx-book-theme>=1.1.3",
  "sphinx-copybutton",
  "sphinx-toolbox>=3.8.1",
  "sphinxcontrib-bibtex>=2.6.3",
  "sphinxext-opengraph",
]
optional-dependencies.nb = [
  "buckaroo>=0.7.12",
  "ipylab>=1",
  "jupyter-bokeh>=4.0.5",
  "jupyterlab",
  "notebook",
]
optional-dependencies.test = [ "coverage", "pytest" ]
urls.Documentation = "https://nbl.readthedocs.io/"
urls.Home-page = "https://github.com/karadavis-lab/nbl"
urls.Source = "https://github.com/karadavis-lab/nbl"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "nbl" ]
omit = [ "**/test_*.py" ]

[tool.uv.sources]
flowsom = { git = "https://github.com/saeyslab/FlowSOM_Python", branch = "main" }
spatialdata = { git = "https://github.com/srivarra/spatialdata", branch = "fsspec_bump" }
spatialdata-plot = { git = "https://github.com/melonora/spatialdata-plot", branch = "xarray_datatree" }
spatialdata-io = { git = "https://github.com/melonora/spatialdata-io", branch = "xarray_datatree" }
vitessce = { git = "https://github.com/vitessce/vitessce-python", branch = "main" }
spaco-release = { git = "https://github.com/BrainStOrmics/Spaco", branch = "main" }
annsel = { git = "https://github.com/srivarra/annsel", branch = "main" }
sparrow = { path = "../harpy/dist/sparrow-0.0.1-py3-none-any.whl" }

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
