[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "nbl"
description = "Neuroblastoma Analysis Project"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sricharan Reddy Varra", email = "srivarra@stanford.edu" },
]
authors = [
  { name = "Sricharan Reddy Varra" },
]
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dynamic = [ "version" ]
dependencies = [
  "anndata",
  "annsel>=0.1.1",
  "boltons>=25",
  "cmap>=0.6",
  "dask[array,diagnostics,distributed]",
  "dask-image>=2024.5.3",
  "matplotlib>=3.10.1",
  "more-itertools>=10.7",
  "natsort>=8.4",
  "ngff-zarr",
  "openpyxl>=3.1.5",
  "rapidfuzz>=3.13",
  # for debug logging (referenced from the issue template)
  "session-info2>=0.1.2",
  "torch>=2.7",
  "typer>=0.15.3",
  "xarray[accel,parallel]",
  "xbatcher>=0.4",
  "xmltodict>=0.14.2",
]
optional-dependencies.all = [
  "nbl[dev,spatial,analysis,napari,nb,storage,jax,doc,test]",
]
optional-dependencies.analysis = [
  "cellrank>=2.0.6",
  "flowsom",
  "formulaic",           # Add version if known
  "formulaic-contrasts",
  "moscot>=0.4",
  "palantir>=1.3.6",
  "phate>=1.0.11",
  "pygpcca",
  "scvelo",
  "statsmodels>=0.14.4",
]
# Removed invalid empty optional dependency group
optional-dependencies.dev = [
  "pre-commit",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",                       # Duplicated in nb, keep here for doc build env
  "ipython",                         # Duplicated in nb, keep here for doc build env
  "myst-nb>=1.1",
  "pandas",                          # Add version if known
  # Until pybtex >0.24.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=4",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.jax = [
  "equinox>=0.11.11",
  "jax>=0.5",
  "jax-metal>=0.1.1; sys_platform=='darwin'",
  "jaxlib>=0.5",
]
optional-dependencies.napari = [
  "napari[pyqt6,optional]",    # Add version if known
  "napari-spatialdata>=0.5.6",
  "textalloc>=1.1.8",
]
optional-dependencies.nb = [
  "buckaroo>=0.9.17",
  "hvplot>=0.11.3",
  "ipykernel",
  "ipylab>=1",
  "ipython",
  "jupyter-bokeh>=4.0.5",
  "jupyterlab",           # Add version if known
]
optional-dependencies.spatial = [
  "harpy-analysis",
  "instanseg-torch",

  "spatial-collection",
  "spatialdata>=0.4",
  "spatialdata-plot>=0.2.10",
  "spatialproteomics>=0.7",
  "squidpy",                  # Add version if known
]
optional-dependencies.storage = [
  "faker>=35.2",
  "faker-biology>=0.6.4",
  "fsspec[git,s3]",                              # Add version if known
  "lamindb[jupyter,bionty,erdiagram,zarr]>=1.4",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://nbl.readthedocs.io/"
urls.Homepage = "https://github.com/karadavis-lab/nbl"
urls.Source = "https://github.com/karadavis-lab/nbl"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "nbl" ]
omit = [
  "**/test_*.py",
]

[tool.uv.sources]
flowsom = { git = "https://github.com/saeyslab/FlowSOM_Python", branch = "main" }
spatialdata = { git = "https://github.com/scverse/spatialdata", branch = "main" }
spatialdata-plot = { git = "https://github.com/scverse/spatialdata-plot", branch = "main" }
vitessce = { git = "https://github.com/vitessce/vitessce-python", branch = "main" }
spaco-release = { git = "https://github.com/BrainStOrmics/Spaco", branch = "main" }
palantir = { git = "https://github.com/dpeerlab/palantir", branch = "master" }
pygpcca = { git = "https://github.com/msmdev/pyGPCCA", branch = "main" }
scvelo = { git = "https://github.com/theislab/scvelo", branch = "main" }
formulaic-contrasts = { git = "https://github.com/scverse/formulaic-contrasts", branch = "main" }
harpy-analysis = { git = "https://github.com/srivarra/harpy", branch = "ndarray/numpydantic" }
instanseg-torch = { git = "https://github.com/instanseg/instanseg", branch = "main" }
spatial-collection = { git = "https://github.com/srivarra/spatial-collection", branch = "main" }

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
